# axi-assistant

./: .env.template  .gitignore  .pre-commit-config.yaml  BUGS.md  CLAUDE.md  FLOWCODER_REQUIREMENTS.md  PLAN.md  README.md  SMOKE_TEST_REPORT.md  SOUL.md  SPEC_DIFF.md  _worktree_test.txt  axi-bot.service  axi-procmux.service  axi-test@.service  axi_test.py  bot.py  decision-council.md  decision-mode.md  discord_mcp_server.py  docker-compose.yml  handlers.py  polya.md  pyproject.toml  pyrightconfig.json  pytest.ini  readme_content.md  sdk-diff.md  test_agenthub.py
.claude/commands/: gen-spec.md  (+1 more)
axi/: agents.py  axi_types.py  channels.py  config.py  discord_frontend.py  discord_stream.py  discord_ui.py  discord_wire.py  egress_filter.py  extensions.py  flowcoder.py  http_api.py  hub_wiring.py  main.py  metrics.py  prompts.py  schedule_tools.py  shutdown.py  supervisor.py  tools.py  tracing.py  worktrees.py
axi-py/: SOUL.md  SPEC.md  SPEC_LOG.md  dev_context.md  pyproject.toml  ruff.toml  test_process_leak.py
axi-rs/: Cargo.toml  REFACTOR_PLAN.md  SECURITY_REVIEW.md  SPEC.md  SPEC_LOG.md  axi-bot.service  build-release.sh
axi-rs/crates/axi/: Cargo.toml
axi-rs/crates/axi-config/: Cargo.toml
axi-rs/crates/axi-config/src/: config.rs  discord.rs  lib.rs  mcp.rs  model.rs
axi-rs/crates/axi-voice/: Cargo.toml
axi-rs/crates/axi-voice/src/: gateway.rs  lib.rs  playback.rs  receive.rs  resample.rs  router.rs  stt.rs  tts.rs
axi-rs/crates/axi/src/: activity.rs  channels.rs  claude_process.rs  commands.rs  events.rs  flowcoder.rs  frontend.rs  lifecycle.rs  main.rs  mcp_protocol.rs  mcp_schedule.rs  mcp_tools.rs  messaging.rs  permissions.rs  procmux_wire.rs  prompts.rs  rate_limits.rs  reconnect.rs  registry.rs  scheduler.rs  shutdown.rs  slots.rs  startup.rs  state.rs  streaming.rs  tasks.rs  todos.rs  types.rs
axi-rs/crates/claudewire/: Cargo.toml  PROTOCOL.md
axi-rs/crates/claudewire/src/: config.rs  lib.rs  schema.rs  session.rs  types.rs
axi-rs/crates/claudewire/tests/: real_cli.rs
axi-rs/crates/discordquery/: Cargo.toml
axi-rs/crates/discordquery/src/: main.rs
axi-rs/crates/flowchart/: Cargo.toml  README.md
axi-rs/crates/flowchart-runner/: Cargo.toml
axi-rs/crates/flowchart-runner/src/: error.rs  executor.rs  json_extract.rs  lib.rs  protocol.rs  session.rs  variables.rs
axi-rs/crates/flowchart/examples/: convenience.rs
axi-rs/crates/flowchart/src/: condition.rs  error.rs  interpolate.rs  lib.rs  model.rs  parse.rs  resolve.rs  validate.rs  walker.rs
axi-rs/crates/flowchart/tests/: fixtures.rs  stress.rs  walk.rs
axi-rs/crates/flowchart/tests/fixtures/: autonomous-dev.json  create-dag.json  create-documents.json  dependency-manager.json  documentation-generator.json  implement-phase.json  iterate-dag.json  mil.json  mill.json  single-wave.json  test-suite-builder.json  update-encyclopedia.json  wave-dev.json  wave-make-tests-e2e-only.json  wave-run-tests.json  wave-test.json
axi-rs/crates/flowcoder/: Cargo.toml
axi-rs/crates/flowcoder-engine/: Cargo.toml
axi-rs/crates/flowcoder-engine/src/: control.rs  engine_protocol.rs  engine_session.rs  events.rs  main.rs  proxy.rs  router.rs
axi-rs/crates/flowcoder/src/: claude_session.rs  main.rs  repl.rs  tui_protocol.rs
axi-rs/crates/procmux/: Cargo.toml
axi-rs/crates/procmux/src/: client.rs  lib.rs  main.rs  protocol.rs  server.rs
axi-rs/crates/procmux/tests/: integration.rs
axi-rs/systemd/: axi-bot.service  axi-procmux.service  axi-test-bot@.service  axi-test-procmux@.service
commands/: DAG_SYSTEM_OVERVIEW.md  algorithm.json  all-waves.json  code-quality-audit.json  create-waves.json  discord-test-generator.json  discord-test-healer.json  discord-test-planner.json  full-auto-dag.json  full-auto-waves.json  integration-validator.json  mil.json  mill.json  mini-wave-run-tests.json  mini-wave.json  phase-planner.json  prompt.json  requirement-validator.json  research-mode.json  single-wave-e2e-only.json  soul-flow.json  soul.json  test-fix-loop.json  validate-and-audit.json  wave-make-tests.json  wave_e2e.json  wave_e2e_no_plan.json
docs/: axi-runtime-configuration.md  chatgpt-anthropic-proxy.md  testing-flowcoder.md
prompts/: SOUL.md  axi_codebase_context.md  dev_context.md
research/: agent_harness.md  agent_harness_evaluation.md  arc_agi_solver.py  axi_to_flowcoder.md  multi_agent_orchestration.md  program_flowchart_hot_reload.py  program_flowchart_prompt_evolver.py  program_flowchart_research_mode.py  program_flowchart_self_modifying.py  program_flowcharts.md  program_flowcharts_simple.md
rfcs/: 0001-agent-state-machine.md  0002-query-processing-streaming.md  0003-flowcoder.md  TEMPLATE.md
scripts/: discord_mcp_server.py  migrate_guild.py  migrate_user_data.py  status_tools.py
specs/: agent-restart-reuses-channel.md  agent-spawn-and-smoke.md  agent-tool-visibility.md  basic-echo-master.md  clear-command-confirms.md  compact-command-reports-tokens.md  debug-toggle-command.md  duplicate-live-agent-name.md  emoji-checkmark-reaction.md  killed-agent-rejects-messages.md  readme-channel-has-content.md  spawn-and-kill-smoke.md  status-command-reports.md
tests/: axi_e2e.py  conftest.py  helpers.py  llm_judge.py  test_agent_restart_reuses_channel_generated.py  test_agent_spawn_and_smoke_generated.py  test_agent_tool_visibility_generated.py  test_agenthub.py  test_agenthub_live.py  test_basic_echo_master_generated.py  test_bridge.py  test_clear_command_confirms_generated.py  test_compact_command_reports_tokens_generated.py  test_core.py  test_debug_toggle_command_generated.py  test_discord_e2e_framework_live.py  test_duplicate_live_agent_name_generated.py  test_edge_cases.py  test_emoji_checkmark_reaction_generated.py  test_killed_agent_rejects_messages_generated.py  test_mcp_tools.py  test_messaging.py  test_plan_mode.py  test_process_leak.py  test_readme_channel_has_content_generated.py  test_spawn_and_kill_smoke_generated.py  test_status_command_reports_generated.py  test_stop_ux_regressions.py
web/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+153 files in other folders)
