[package]
name = "axi-config"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
tokio = { workspace = true }
thiserror = { workspace = true }
shellexpand = "3"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
