[package]
name = "axi-voice"
version = "0.1.0"
edition = "2021"

[dependencies]
songbird = { workspace = true }
tokio-tungstenite = { workspace = true }
bytes = { workspace = true }
bytemuck = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
base64 = "0.22"
tokio = { workspace = true }
tokio-util = "0.7"
tokio-stream = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
symphonia = { version = "0.5.2", default-features = false, features = ["pcm"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "voice"] }
futures-util = "0.3"
http = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
