[package]
name = "axi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axi"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache"] }
base64 = "0.22"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
regex-lite = "0.1"
shellexpand = "3"
urlencoding = "2"
which = "7"
axi-config = { path = "../axi-config" }
claudewire = { path = "../claudewire" }
procmux = { path = "../procmux" }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
wiremock = "0.6"

[lints]
workspace = true
