[package]
name = "claudewire"
version = "0.1.0"
edition.workspace = true

[features]
integration = []

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true }

[dev-dependencies]
which = "7"

[lints]
workspace = true
