[package]
name = "discordquery"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "discordquery"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
axi-config = { path = "../axi-config" }

[lints]
workspace = true
