[package]
name = "flowchart-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
flowchart = { path = "../flowchart" }
tokio = { workspace = true }
tokio-util = "0.7"
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
