[package]
name = "procmux"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "procmux"
path = "src/main.rs"

[lib]
name = "procmux"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
